feat: working gp_implementation

--- a/implementation/05_Feature_analysis.ipynb
+++ b/implementation/05_Feature_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "49cdaa5a-a848-4a8d-9085-048b7b5a950a",
    "metadata": {},
    "outputs": [],
@@ -247,9 +247,351 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "143e5703-db3c-48c7-8846-04ffda687e01",
+   "metadata": {},
+   "source": [
+    "# Creating testing data for another GP Development with just X_train and y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bd7e6879-042e-469c-a691-94d5870d9429",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating testing data for another application with just X_train and y_train\n",
+    "testing_data_X_train = X_train_scaled[:1000]  # Limit to 1000 rows\n",
+    "testing_data_y_train = y_train_scaled[:1000]  # Limit to 1000 rows\n",
+    "\n",
+    "# Convert to DataFrames if needed\n",
+    "df_X_train = pd.DataFrame(testing_data_X_train, columns=X_train.columns)\n",
+    "df_y_train = pd.DataFrame(testing_data_y_train, columns=['target'])\n",
+    "\n",
+    "# Save to CSV files\n",
+    "df_X_train.to_csv('data/gp_data_X_train.csv', index=False)\n",
+    "df_y_train.to_csv('data/gp_data_y_train.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "05c1bc2c-aa7e-4991-8f7f-8aa044931c15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preview of X_train data:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>sma_30</th>\n",
+       "      <th>rsi</th>\n",
+       "      <th>macd</th>\n",
+       "      <th>dia_close</th>\n",
+       "      <th>dia_volume</th>\n",
+       "      <th>gld_close</th>\n",
+       "      <th>gld_volume</th>\n",
+       "      <th>spy_close</th>\n",
+       "      <th>...</th>\n",
+       "      <th>total_public_debt_gdp_value</th>\n",
+       "      <th>trade_balance_value</th>\n",
+       "      <th>trade_in_services_value</th>\n",
+       "      <th>unemployment_rate_value</th>\n",
+       "      <th>value</th>\n",
+       "      <th>classification_numerical</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.006269</td>\n",
+       "      <td>0.008161</td>\n",
+       "      <td>0.000844</td>\n",
+       "      <td>0.562771</td>\n",
+       "      <td>0.553744</td>\n",
+       "      <td>0.070808</td>\n",
+       "      <td>0.000035</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>0.064174</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.028412</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.855752</td>\n",
+       "      <td>0.273973</td>\n",
+       "      <td>0.438132</td>\n",
+       "      <td>0.400017</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.006272</td>\n",
+       "      <td>0.004688</td>\n",
+       "      <td>0.000846</td>\n",
+       "      <td>0.572463</td>\n",
+       "      <td>0.553740</td>\n",
+       "      <td>0.070808</td>\n",
+       "      <td>0.000035</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>0.064174</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.028412</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.855752</td>\n",
+       "      <td>0.273973</td>\n",
+       "      <td>0.438132</td>\n",
+       "      <td>0.400017</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.043478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.006275</td>\n",
+       "      <td>0.004734</td>\n",
+       "      <td>0.000847</td>\n",
+       "      <td>0.558849</td>\n",
+       "      <td>0.553731</td>\n",
+       "      <td>0.070808</td>\n",
+       "      <td>0.000035</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>0.064174</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.028412</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.855752</td>\n",
+       "      <td>0.273973</td>\n",
+       "      <td>0.438132</td>\n",
+       "      <td>0.400017</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.086957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.006273</td>\n",
+       "      <td>0.005284</td>\n",
+       "      <td>0.000850</td>\n",
+       "      <td>0.680175</td>\n",
+       "      <td>0.553763</td>\n",
+       "      <td>0.070808</td>\n",
+       "      <td>0.000035</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>0.064174</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.028412</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.855752</td>\n",
+       "      <td>0.273973</td>\n",
+       "      <td>0.438132</td>\n",
+       "      <td>0.400017</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.130435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.006304</td>\n",
+       "      <td>0.018559</td>\n",
+       "      <td>0.000854</td>\n",
+       "      <td>0.783718</td>\n",
+       "      <td>0.553846</td>\n",
+       "      <td>0.070808</td>\n",
+       "      <td>0.000035</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>0.064174</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.028412</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.855752</td>\n",
+       "      <td>0.273973</td>\n",
+       "      <td>0.438132</td>\n",
+       "      <td>0.400017</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.173913</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 40 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       open    volume    sma_30       rsi      macd  dia_close  dia_volume  \\\n",
+       "0  0.006269  0.008161  0.000844  0.562771  0.553744   0.070808    0.000035   \n",
+       "1  0.006272  0.004688  0.000846  0.572463  0.553740   0.070808    0.000035   \n",
+       "2  0.006275  0.004734  0.000847  0.558849  0.553731   0.070808    0.000035   \n",
+       "3  0.006273  0.005284  0.000850  0.680175  0.553763   0.070808    0.000035   \n",
+       "4  0.006304  0.018559  0.000854  0.783718  0.553846   0.070808    0.000035   \n",
+       "\n",
+       "   gld_close  gld_volume  spy_close  ...  total_public_debt_gdp_value  \\\n",
+       "0        0.0    0.000009   0.064174  ...                     0.028412   \n",
+       "1        0.0    0.000009   0.064174  ...                     0.028412   \n",
+       "2        0.0    0.000009   0.064174  ...                     0.028412   \n",
+       "3        0.0    0.000009   0.064174  ...                     0.028412   \n",
+       "4        0.0    0.000009   0.064174  ...                     0.028412   \n",
+       "\n",
+       "   trade_balance_value  trade_in_services_value  unemployment_rate_value  \\\n",
+       "0                  1.0                 0.855752                 0.273973   \n",
+       "1                  1.0                 0.855752                 0.273973   \n",
+       "2                  1.0                 0.855752                 0.273973   \n",
+       "3                  1.0                 0.855752                 0.273973   \n",
+       "4                  1.0                 0.855752                 0.273973   \n",
+       "\n",
+       "      value  classification_numerical  year  month  day      hour  \n",
+       "0  0.438132                  0.400017   0.0    0.0  0.0  0.000000  \n",
+       "1  0.438132                  0.400017   0.0    0.0  0.0  0.043478  \n",
+       "2  0.438132                  0.400017   0.0    0.0  0.0  0.086957  \n",
+       "3  0.438132                  0.400017   0.0    0.0  0.0  0.130435  \n",
+       "4  0.438132                  0.400017   0.0    0.0  0.0  0.173913  \n",
+       "\n",
+       "[5 rows x 40 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Preview of y_train data:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.001123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.001126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.001124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.001156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.001204</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     target\n",
+       "0  0.001123\n",
+       "1  0.001126\n",
+       "2  0.001124\n",
+       "3  0.001156\n",
+       "4  0.001204"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Size of X_train data: (1000, 40)\n",
+      "Size of y_train data: (1000, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the generated testing data\n",
+    "df_X_train_loaded = pd.read_csv('data/gp_data_X_train.csv')\n",
+    "df_y_train_loaded = pd.read_csv('data/gp_data_y_train.csv')\n",
+    "\n",
+    "# Preview the loaded data\n",
+    "print(\"Preview of X_train data:\")\n",
+    "display(df_X_train_loaded.head())\n",
+    "\n",
+    "print(\"\\nPreview of y_train data:\")\n",
+    "display(df_y_train_loaded.head())\n",
+    "\n",
+    "# Print the size of the loaded data\n",
+    "print(\"\\nSize of X_train data:\", df_X_train_loaded.shape)\n",
+    "print(\"Size of y_train data:\", df_y_train_loaded.shape)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd7e6879-042e-469c-a691-94d5870d9429",
+   "id": "ec47b7b5-b319-4cec-a3a2-792b2475a120",
    "metadata": {},
    "outputs": [],
    "source": []
